--- a/www/main.css
+++ b/www/main.css
@@ -42,6 +42,8 @@ div#infopane {
 div#footer {
 	padding-top: 10px;
 	border-top: 3px solid;
+	font-size: 8pt;
+	text-align: center;
 }
 
 table.objectdata th {
