--- a/www/main.css
+++ b/www/main.css
@@ -1,3 +1,11 @@
+.hidden {
+	display: none;
+}
+
+.indent {
+	margin-left: 20px;
+}
+
 div#header {
 	padding-bottom: 10px;
 	border-bottom: 3px solid;
@@ -35,8 +43,8 @@ div#pictureframe img {
 }
 
 div#infopane {
-	width: 100%;
 	padding-bottom: 25px; /* Tooltips aren't showing over bottom of this div... */
+	overflow: hidden;
 }
 
 div#footer {
